GPII-521: Save button container of PCP adjusted.

--- a/demos/pcp/index.html
+++ b/demos/pcp/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Preferences Management Tool</title>
+<title>Personal Control Panel</title>
 
     <!-- The needed infusion CSS files -->
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-reset-global.css" />
