--- a/src/pilot2Frames/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pilot2Frames/pcp/html/PrefsEditorTemplate-PCP.html
@@ -25,11 +25,11 @@
         </div>
     </div>
 
-    <div style="position:absolute;left:419px;top:719px;">
+    <div class="gpii-pcp-bottomRow">
         <span class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
-        <span class="gpii-prefsEditor-saveButtonContainer">
-            <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
-            </label>
+        <span class="gpii-pcp-saveButtonContainer">
+            <span for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
+            </span>
             <input id="pmtSaveButton" class="flc-prefsEditor-save gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
         </span>
     </div>
