GPII-226: Showing/hiding notification using DOM. This was made feasible by using jQuery 1.9 for displaying/hiding the dialog, because at that version dialog() supports an "appendTo" param which denotes where will the notification div be appended. So appending to body is avoided and DOM can still reference the widget. Creating and destroying the widget on show/hide. This prohibited some styling changes because now the notification div is within the context of gpii-prefsEditor CSS class.

--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -19,7 +19,7 @@
             <div class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel gpii-prefsEditor-adjusterGroup"></div>
         </div>
     </div>
-    <div class="gpii-pmt-bottomRow">
+    <div class="gpii-pmt-bottomRow gpiic-pmt-bottomRow">
         <span class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
         <span class="gpii-prefsEditor-saveButtonContainer">
             <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
@@ -29,7 +29,7 @@
             <input id="gotoPcpButton" class="flc-prefsEditor-gotoPcp gpii-prefsEditor-gotoPcp" type="button" value="Go to PCP" />
         </span>
         <div class="gpii-prefsEditor-notification gpiic-prefsEditor-notification">
-            <h2><div class="gpiic-prefsEditor-notificationTitle"></div></h2>
+            <h2 class="gpii-prefsEditor-notificationHeader"><div class="gpiic-prefsEditor-notificationTitle"></div></h2>
             <label class="gpii-prefsEditor-notificationMessage gpiic-prefsEditor-notificationMessagePart1"></label>
             <label class="gpii-prefsEditor-notificationMessage gpii-prefsEditor-notificationMessageTOKEN gpiic-prefsEditor-notificationMessagePart2"></label>
             <label class="gpii-prefsEditor-notificationMessage gpiic-prefsEditor-notificationMessagePart3"></label>
