--- a/src/pmt/pmt-VisualAlternativesGroupContainer.html
+++ b/src/pmt/pmt-VisualAlternativesGroupContainer.html
@@ -8,23 +8,17 @@
             <div class="speakText"></div>
             <div class="words-spoken-per-minute"></div>
             <div class="volume"></div>
-            <!-- <div class="gpiic-visualAlternatives-hidden"> -->
-                <div class="voicePitch"></div>
-                <div class="screenReaderLanguage"></div>
-                <div class="punctuationVerbosity"></div>
-                <div class="capitals"></div>
-                <div class="tutorials"></div>
-                <div class="keyEcho"></div>
-                <div class="wordEcho"></div>
-                <div class="textHighlighting"></div>
-                <div class="screanReaderFollows"></div>
-            <!-- </div> -->
-
-            <!-- <label for="preferenceSwitchVisualAlternativesExtra" class="gpii-prefsEditor-moreLess gpii-prefsEditor-category gpiic-visualAlternatives-moreLess gpiic-visualAlternatives-category"></label>
-            <input type="checkbox" id="preferenceSwitchVisualAlternativesExtra" class="gpiic-visualAlternatives-preferenceSwitchExtra"/> -->
-
+            <div class="voicePitch"></div>
+            <div class="screenReaderLanguage"></div>
+            <div class="punctuationVerbosity"></div>
+            <div class="capitals"></div>
+            <div class="tutorials"></div>
+            <div class="keyEcho"></div>
+            <div class="wordEcho"></div>
+            <div class="textHighlighting"></div>
+            <div class="screanReaderFollows"></div>
+            <div class="visualAlternativesMoreLess"></div>
             <div class="braille"></div><br>
-
         </div>
     </div>
 </form>
