GPII-226: Update pcp.html demo as well

--- a/demos/prefsEditor/pcp.html
+++ b/demos/prefsEditor/pcp.html
@@ -24,16 +24,14 @@
 
     <!-- All styling for PMT is here -->
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/fss-theme-inverted-prefsEditor.css" />
-    <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style-speakText.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/adjusters.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/frames.css" />
 
     <!-- This is breaking the slider color -->
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/combobox.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/pcpFrames.css" />
 
     <!-- The Infusion Library -->
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
@@ -44,7 +42,6 @@
     <script type="text/javascript" src="../../src/shared/adjusters/js/Panels.js"></script>
 
     <script type="text/javascript" src="../../src/shared/frames/js/GPIIPrefsEditor.js"></script>
-    <script type="text/javascript" src="../../src/shared/frames/js/Pilot2PMTDefaults.js"></script>
 
     <!-- The custom adjusters JS files -->
     <script type="text/javascript" src="../../src/shared/components/preview/js/preview.js"></script>
@@ -79,7 +76,6 @@
     <!-- PMT-specific files -->
     <script type="text/javascript" src="../../src/shared/schemas/js/primarySchema.js"></script>
     <script type="text/javascript" src="../../src/shared/schemas/js/pcpSchema.js"></script>
-    <script type="text/javascript" src="../../src/pmt/js/PMT.js"></script>
     <script type="text/javascript" src="../../src/shared/common/GpiiSession.js"></script>
     <script type="text/javascript" src="../../src/shared/common/GpiiStore.js"></script>
 
@@ -99,7 +95,7 @@
 <body>
 
     <!-- This is the div that will contain the UI Options component -->
-    <div id="gpiic-pmt">
+    <div id="gpiic-pcp">
     </div>
 
 </body>
