GPII-521: Removed nested forms from HTML markuls, removed some 'important' rules from stylesheets (still a lot remanining though), deleted unneeded comments.

--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -5,8 +5,8 @@
     </div>
 
     <div class="gpii-prefsEditor-preferencesContainer">
-        <div class="gpii-prefsEditor-preferences gpii-prefsEditor-PCP-preferences gpiic-prefsEditor-preferences">
-            <form id="options" action="" class="fl-prefsEditor gpii-prefsEditor fl-focus">
+        <div class="gpii-prefsEditor-preferences gpii-prefsEditor-pcp-preferences gpiic-prefsEditor-preferences">
+            <div id="options" action="" class="fl-prefsEditor gpii-prefsEditor fl-focus">
 
                 <div class="fl-container-flex30 fl-force-left gpii-prefsEditor-preferenceGroup">
                     <div class="fl-prefsEditor-category">
@@ -21,7 +21,7 @@
                         </div>
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 
@@ -30,7 +30,7 @@
         <span class="gpii-pcp-saveButtonContainer">
             <span for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
             </span>
-            <input id="pmtSaveButton" class="flc-prefsEditor-save gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
+            <input id="pmtSaveButton" class="flc-prefsEditor-save gpii-pcp-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
         </span>
     </div>
 </div>
