--- a/src/shared/adjusters/html/LanguageGroupContainer.html
+++ b/src/shared/adjusters/html/LanguageGroupContainer.html
@@ -1,4 +1,4 @@
-<form id="options" action="" class="fl-prefsEditor fl-prefsEditor-fullNoPreview fl-col-fixed-72em fl-focus">
+<div id="options" action="" class="fl-prefsEditor fl-prefsEditor-fullNoPreview fl-col-fixed-72em fl-focus">
     <div class="flc-prefsEditor-controls">
         <div class="fl-prefsEditor-category">
             <label for="languagePresetButton" class="gpii-languagePresetButton-label gpii-preset-button-label"></label>
@@ -8,4 +8,4 @@
             <div class="universalLanguage"></div>
         </div>
     </div>
-</form>
+</div>
