--- a/src/shared/adjusters/html/pcpTemplate.html
+++ b/src/shared/adjusters/html/pcpTemplate.html
@@ -1,10 +1,10 @@
-<form id="options" action="" class="fl-prefsEditor fl-prefsEditor-fullNoPreview fl-col-fixed-72em fl-focus">
+<div id="options" action="" class="fl-prefsEditor fl-prefsEditor-fullNoPreview fl-col-fixed-72em fl-focus">
     <div class="flc-prefsEditor-controls">
         <div class="fl-prefsEditor-category">
             <div class="gpiic-visualAlternatives"></div>
         </div>
     </div>
-</form>
+</div>
 
 <div class="fl-text-align-center fl-prefsEditor-buttons">
     <input class="flc-prefsEditor-save fl-prefsEditor-save" type="button" />
