--- a/src/pcp/html/pcp-VisualAlternativesGroupContainer.html
+++ b/src/pcp/html/pcp-VisualAlternativesGroupContainer.html
@@ -1,4 +1,4 @@
-<form id="options" action="" class="fl-prefsEditor fl-prefsEditor-fullNoPreview fl-col-fixed-72em fl-focus">
+<div id="options" action="" class="fl-prefsEditor fl-prefsEditor-fullNoPreview fl-col-fixed-72em fl-focus">
     <div class="flc-prefsEditor-controls">
         <div class="fl-prefsEditor-category">
             <label for="visualAlternativesPresetButton" class="gpii-visualAlternativesPresetButton-label gpii-preset-button-label"></label>
@@ -19,4 +19,4 @@
             <div class="braille"></div><br>
         </div>
     </div>
-</form>
+</div>
