--- a/demos/prefsEditor/pcp.html
+++ b/demos/prefsEditor/pcp.html
@@ -38,6 +38,7 @@
 
     <!-- The common JS files -->
     <script type="text/javascript" src="../../src/shared/common/merging.js"></script>
+    <script type="text/javascript" src="../../src/shared/common/OSDetection.js"></script>
 
     <script type="text/javascript" src="../../src/shared/adjusters/js/Panels.js"></script>
 
