GPII-521: There is now a single form for the prefsEditors container. Also removed reference to unexisting stylesheet style-speakText in PMT demo.

--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -1,4 +1,4 @@
-<div id="options" action="" class="fl-container-flex30 fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-pmtContainer">
+<form id="options" action="" class="fl-container-flex30 fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-pmtContainer">
     <div class="gpii-prefsEditor-userStatusBar gpiic-prefsEditor-userStatusBar">
         <label class="gpii-prefsEditor-link gpii-prefsEditor-fullEditor gpiic-prefsEditor-fullEditorLink"></label>
         <label for="pmtResetButton" class="gpii-prefsEditor-link gpii-prefsEditor-pcp-userLogout gpiic-prefsEditor-userLogoutLink"></label>
@@ -33,4 +33,4 @@
             <input id="pmtSaveButton" class="flc-prefsEditor-save gpii-pcp-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
         </span>
     </div>
-</div>
+</form>
