--- a/src/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pmt/html/PrefsEditorTemplate-PMT.html
@@ -1,5 +1,6 @@
 <form id="options" action="" class="fl-container-flex30 fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-pmtContainer">
     <div class="gpii-prefsEditor-userStatusBar gpiic-prefsEditor-userStatusBar">
+        <label class="gpii-prefsEditor-link gpii-prefsEditor-quickEditorLink gpiic-prefsEditor-quickEditorLink"></label>
         <label for="pmtResetButton" class="gpii-prefsEditor-link gpii-prefsEditor-pmt-userLogoutLink gpiic-prefsEditor-userLogoutLink"></label>
     </div>
     <div class="gpii-prefsEditor-preferenceSetSelectionHeader">
