--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -26,11 +26,11 @@
     </div>
 
     <div class="gpii-pcp-bottomRow">
-        <span class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
         <span class="gpii-pcp-saveButtonContainer">
-            <span for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
+            <input class="gpiic-prefsEditor-applyButton gpii-PCP-save gpii-prefsEditor-save" type="button" value="apply" />
+            <span for="pcpSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
             </span>
-            <input id="pmtSaveButton" class="flc-prefsEditor-save gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
+            <input id="pcpSaveButton" class="flc-prefsEditor-save gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save" />
         </span>
     </div>
 </div>
