GPII-578: Using same styling for textFieldSteppers.

--- a/src/shared/adjusters/html/voicePitchTemplate.html
+++ b/src/shared/adjusters/html/voicePitchTemplate.html
@@ -1,10 +1,10 @@
 <div class="gpii-adjusters">
     <div class="gpiic-voicePitch">
         <label class="gpiic-speakText-voicePitch-label gpii-speakText-label"></label><br>
-        <div class="gpiic-speakText-voicePitch-stepper gpii-speakText-voicePitch-stepper">
-            <label class="gpiic-textfieldStepper-decrement gpii-stepperMinus" id="voicePitchMinus"></label>
-            <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField gpii-stepper fl-inputs" />
-            <label class="gpiic-textfieldStepper-increment gpii-stepperPlus" id="voicePitchPlus"></label>
+        <div class="gpiic-speakText-voicePitch-stepper gpii-stepper gpii-stepper-pmt">
+            <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+            <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
+            <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
         </div>
     </div><br>
 </div>
