--- a/src/shared/adjusters/html/universalVolumeTemplate.html
+++ b/src/shared/adjusters/html/universalVolumeTemplate.html
@@ -2,10 +2,10 @@
     <div class="gpiic-universalVolume">
         <label class="gpiic-speakText-universalVolume-label gpii-speakText-label"></label><br>
         <div class="gpiic-universalVolume-description gpii-description"></div>
-        <div class="gpiic-speakText-universalVolume-stepper gpii-speakText-universalVolume-stepper">
-            <label class="gpiic-textfieldStepper-decrement gpii-stepperMinus" id="universalVolumeMinus"></label>
-            <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField gpii-stepper fl-inputs" />
-            <label class="gpiic-textfieldStepper-increment gpii-stepperPlus" id="universalVolumePlus"></label>
+        <div class="gpiic-speakText-universalVolume-stepper gpii-stepper gpii-stepper-pmt">
+            <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+            <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
+            <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
         </div>
     </div><br>
 </div>
