--- a/src/shared/adjusters/html/increaseSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePMT.html
@@ -31,7 +31,7 @@
             </div>
         </div>
 
-        <label for="preferenceSwitchMagnifierExtra" class="gpii-prefsEditor-moreLess gpii-prefsEditor-category gpiic-magnifier-moreLess gpiic-magnifier-category"></label>
+        <input type="button" class="gpii-prefsEditor-moreLess gpii-prefsEditor-category gpiic-magnifier-moreLess gpiic-magnifier-category"/>
         <input type="checkbox" id="preferenceSwitchMagnifierExtra" class="gpiic-magnifier-preferenceSwitchExtra"/>
     </div>
 </div>
