--- a/src/shared/adjusters/html/increaseSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePMT.html
@@ -31,7 +31,9 @@
             </div>
         </div>
 
-        <input type="button" class="gpii-prefsEditor-moreLess gpii-prefsEditor-category gpiic-magnifier-moreLess gpiic-magnifier-category"/>
-        <input type="checkbox" id="preferenceSwitchMagnifierExtra" class="gpiic-magnifier-preferenceSwitchExtra"/>
+        <div class="gpii-prefsEditor-moreLessWrapper">
+            <input type="button" class="gpii-prefsEditor-moreLess gpiic-magnifier-moreLess gpiic-magnifier-category"/>
+            <input type="checkbox" id="preferenceSwitchMagnifierExtra" class="gpiic-magnifier-preferenceSwitchExtra"/>
+        </div>
     </div>
 </div>
