GPII-592: More/less in Speak text is also a button. In order to receive focus.

--- a/src/shared/adjusters/html/visualAlternativesMoreLessTemplate.html
+++ b/src/shared/adjusters/html/visualAlternativesMoreLessTemplate.html
@@ -1,6 +1,6 @@
 <div class="gpii-adjusters gpii-fully-expanded gpii-visualAlternativesMoreLess">
     <input type="checkbox" id="more-less" class="gpiic-visualAlternativesMoreLess"/>
     <label for="more-less" class="gpii-visualAlternativesMoreLess-label">
-            <span class="gpiic-visualAlternativesMoreLess-label"></span>
+            <input type="button" class="gpii-prefsEditor-moreLess gpiic-visualAlternativesMoreLess-label">
     </label>
 </div>
