GPII-559: Apply button text now extracted from JSON.

--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -27,10 +27,10 @@
 
     <div class="gpii-pcp-bottomRow">
         <span class="gpii-pcp-saveButtonContainer">
-            <input class="gpiic-prefsEditor-applyButton gpii-PCP-save gpii-prefsEditor-save" type="button" value="apply" />
+            <input class="gpiic-prefsEditor-applyButton gpii-PCP-apply gpii-PCP-button gpii-prefsEditor-save" type="button" />
             <span for="pcpSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
             </span>
-            <input id="pcpSaveButton" class="flc-prefsEditor-save gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save" />
+            <input id="pcpSaveButton" class="flc-prefsEditor-save gpii-PCP-button fl-prefsEditor-save gpii-prefsEditor-save" type="button" />
         </span>
     </div>
 </div>
