GPII-599: Made all the preview frames non-focusable.

--- a/src/shared/adjusters/html/contrastThemeTemplatePMT.html
+++ b/src/shared/adjusters/html/contrastThemeTemplatePMT.html
@@ -2,7 +2,7 @@
 <div class="gpii-prefsEditor-previewPerSettingContainer">
     <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
     <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-    <iframe class="gpii-prefsEditor-previewPerSettingFrame gpiic-adjuster-preview gpiic-contrast-previewPerSettingFrameContrast" src="" frameborder="0"></iframe>
+    <iframe tabindex="-1" class="gpii-prefsEditor-previewPerSettingFrame gpiic-adjuster-preview gpiic-contrast-previewPerSettingFrameContrast" src="" frameborder="0"></iframe>
 </div>
 <div class="flc-prefsEditor-themeRow fl-choice">
     <input type="radio" class="flc-prefsEditor-themeInput fl-hidden-accessible" name="theme" id="bw" value="bw" />
