--- a/src/shared/adjusters/html/cursorSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/cursorSizeTemplatePMT.html
@@ -3,7 +3,7 @@
 <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingContainer">
     <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
     <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-    <iframe class="gpii-prefsEditor-previewPerSettingFrame gpiic-adjuster-preview" src="" frameborder="0"></iframe>
+    <iframe tabindex="-1" class="gpii-prefsEditor-previewPerSettingFrame gpiic-adjuster-preview" src="" frameborder="0"></iframe>
 </div>
 
 <div class="gpiic-increaseSize-cursor-size-slider">
