--- a/src/shared/adjusters/html/brailleTemplate.html
+++ b/src/shared/adjusters/html/brailleTemplate.html
@@ -1,12 +1,18 @@
-<div class="gpii-adjusters">
-    <h3><label for="braille" class="gpiic-screenReaderBrailleOutput-label gpii-switch"></label></h3>
-    <div id="gpii-brailleOnOff" class="fl-prefsEditor-onoff">
-        <input type="checkbox" id="braille" class="gpiic-screenReaderBrailleOutput" />
-        <label for="braille">
-            <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
+<div class="gpii-onOffSwitch-container">
+    <h2 class="gpii-prefsEditor-firstHeading ">
+        <label for="onOffSwitchInputBraille" class="gpiic-onOffSwitch-label gpii-onOffSwitch-switch"></label>
+    </h2>
+    <div id="gpii-onOffSwitch-onOff" class="fl-prefsEditor-onoff">
+        <!--
+            TODO: This ID needs to be set differently because having two instances of the onOffSwitch adjuster
+            within the same composite panel creates an inconsistency on which element the labels' "for" attribute refer to 
+        -->
+        <input type="checkbox" id="onOffSwitchInputBraille" class="gpiic-onOffSwitch-input"/>
+        <label for="onOffSwitchInputBraille">
+            <span class="fl-prefsEditor-switch gpiic-prefsEditor-onOffSwitch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
                 <span class="fl-prefsEditor-switch-inner"></span>
             </span>
         </label>
-    </div><br><br>
-    <div class="gpiic-screenReaderBrailleOutput-description gpii-description"></div>
+    </div>
 </div>
+<div class="gpiic-screenReaderBrailleOutput-description gpii-description"></div>
