GPII-590: Fixed focus on punctuation marks selections.

--- a/src/shared/adjusters/html/punctuationVerbosityTemplate.html
+++ b/src/shared/adjusters/html/punctuationVerbosityTemplate.html
@@ -5,7 +5,7 @@
         <div class="gpii-punctuationVerbosity-container">
             <div class="gpiic-speakText-punctuationVerbosity-row">
                 <input type="radio" class="gpiic-speakText-punctuationVerbosity" id="radioButton-option"/>
-                <label class="gpiic-speakText-punctuationVerbosity-option-label" for="radioButton-option"></label>
+                <label class="gpiic-speakText-punctuationVerbosity-option-label" for="radioButton-option" tabindex="0"></label>
             </div>
         </div>
     </div>
