--- a/demos/prefsEditor/index.html
+++ b/demos/prefsEditor/index.html
@@ -43,6 +43,7 @@
         <!-- The common JS files -->
         <script type="text/javascript" src="../../src/shared/common/merging.js"></script>
 
+        <script type="text/javascript" src="../../src/shared/adjusters/js/activatableLabels.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/Panels.js"></script>
 
         <!-- The custom adjusters JS files -->
