--- a/src/shared/adjusters/html/contrastThemeNoPreviewTemplate.html
+++ b/src/shared/adjusters/html/contrastThemeNoPreviewTemplate.html
@@ -1,7 +1,7 @@
 <h2 class="gpii-prefsEditor-firstHeading"><label class="gpiic-contrast-colourTheme"></label></h2>
 <div class="flc-prefsEditor-themeRow fl-choice gpii-prefsEditor-themeRow">
     <input type="radio" class="flc-prefsEditor-themeInput fl-hidden-accessible" name="theme" id="bw" value="bw" />
-    <label for="bw" class="gpii-contrastThemeLabel flc-prefsEditor-theme-label gpii-contrastThemeLabel">
+    <label for="bw" class="gpii-contrastThemeLabel flc-prefsEditor-theme-label gpii-contrastThemeLabel" tabindex="0">
         <span class="fl-preview-A"></span>
         <span class="fl-hidden-accessible"></span>
         <div class="fl-crossout"></div>
