--- a/src/shared/adjusters/html/magnifierPositionTemplate.html
+++ b/src/shared/adjusters/html/magnifierPositionTemplate.html
@@ -3,7 +3,7 @@
     <div class="gpiic-increaseSize-magnifierPositionRow fl-choice gpii-prefsEditor-choice">
         <input type="radio" class="gpiic-increaseSize-magnifierPositionInput" name="magnifierPosition" id="magnifierPosition" />
         <div class="fl-indicator gpii-prefsEditor-indicator"></div>
-        <label for="magnifierPosition" class="gpii-increaseSize-magnifierPositionLabel gpiic-increaseSize-magnifierPositionLabel" tooltip="" title="">
+        <label for="magnifierPosition" class="gpii-increaseSize-magnifierPositionLabel gpiic-increaseSize-magnifierPositionLabel" tooltip="" title="" tabindex="0">
             <span class="fl-preview-A"></span>
             <span class="fl-hidden-accessible"></span>
             <div class="fl-crossout"></div>
