GPII-590: Trying to use activatableLabelsPropagateKeyEventToLabelFor grade for punctuation marks. No go yet...

--- a/demos/prefsEditor/index.html
+++ b/demos/prefsEditor/index.html
@@ -44,6 +44,7 @@
         <script type="text/javascript" src="../../src/shared/common/merging.js"></script>
 
         <script type="text/javascript" src="../../src/shared/adjusters/js/activatableLabelsClickOnActivate.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/activatableLabelsPropagateKeyEventToLabelFor.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/Panels.js"></script>
 
         <!-- The custom adjusters JS files -->
