--- a/src/shared/adjusters/html/punctuationVerbosityTemplate.html
+++ b/src/shared/adjusters/html/punctuationVerbosityTemplate.html
@@ -4,8 +4,8 @@
         <label class="gpiic-speakText-punctuationVerbosity-label gpii-description"></label>
         <div class="gpii-punctuationVerbosity-container">
             <div class="gpiic-speakText-punctuationVerbosity-row">
-                <input type="radio" class="gpiic-speakText-punctuationVerbosity" id="radioButton-option"/>
-                <label class="gpiic-speakText-punctuationVerbosity-option-label" for="radioButton-option" tabindex="0"></label>
+                <input type="radio" class="gpii-prefsEditor-focusableRadio gpiic-speakText-punctuationVerbosity" id="radioButton-option"/>
+                <label class="gpiic-speakText-punctuationVerbosity-option-label" for="radioButton-option"></label>
             </div>
         </div>
     </div>
