GPII-600: Added a common function that gets the aria label id to be shared by various components and widgets, as well as fixing a typo.

--- a/demos/prefsEditor/pcp.html
+++ b/demos/prefsEditor/pcp.html
@@ -37,6 +37,7 @@
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
 
     <!-- The common JS files -->
+    <script type="text/javascript" src="../../src/shared/common/utility.js"></script>
     <script type="text/javascript" src="../../src/shared/common/merging.js"></script>
     <script type="text/javascript" src="../../src/shared/common/OSDetection.js"></script>
 
