--- a/demos/pcp/index.html
+++ b/demos/pcp/index.html
@@ -38,6 +38,7 @@
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
 
     <!-- The common JS files -->
+    <script type="text/javascript" src="../../src/shared/common/utility.js"></script>
     <script type="text/javascript" src="../../src/shared/common/merging.js"></script>
 
     <script type="text/javascript" src="../../src/shared/adjusters/js/Panels.js"></script>
