GPII-593: Fixed some styling issues.

--- a/src/pmt/pmt-VisualAlternativesGroupContainer.html
+++ b/src/pmt/pmt-VisualAlternativesGroupContainer.html
@@ -4,21 +4,23 @@
         <label for="visualAlternativesPresetButton" class="visualAlternatives-header-icon gpii-header-icon"></label><br>
         <div class="gpii-spacingEnsurer"></div>
 
-        <div class="speakText"></div>
-        <div class="words-spoken-per-minute"></div>
-        <div class="volume"></div>
-        <div id="gpiic-visualAlternatives-hiddenPanel" class="gpiic-visualAlternatives-hiddenPanel" aria-expanded="" aria-label="" role="region">
-            <div class="voicePitch"></div>
-            <div class="screenReaderLanguage"></div>
-            <div class="punctuationVerbosity"></div>
-            <div class="capitals"></div>
-            <div class="tutorials"></div>
-            <div class="keyEcho"></div>
-            <div class="wordEcho"></div>
-            <div class="textHighlighting"></div>
-            <div class="screanReaderFollows"></div>
+        <div class="gpii-prefsEditor-category">
+            <div class="speakText"></div>
+            <div class="words-spoken-per-minute"></div>
+            <div class="volume"></div>
+            <div id="gpiic-visualAlternatives-hiddenPanel" class="gpiic-visualAlternatives-hiddenPanel" aria-expanded="" aria-label="" role="region">
+                <div class="voicePitch"></div>
+                <div class="screenReaderLanguage"></div>
+                <div class="punctuationVerbosity"></div>
+                <div class="capitals"></div>
+                <div class="tutorials"></div>
+                <div class="keyEcho"></div>
+                <div class="wordEcho"></div>
+                <div class="textHighlighting"></div>
+                <div class="screanReaderFollows"></div>
+            </div>
+            <div class="visualAlternativesMoreLess"></div>
+            <div class="braille"></div><br>
         </div>
-        <div class="visualAlternativesMoreLess"></div>
-        <div class="braille"></div><br>
     </div>
 </div>
