--- a/src/shared/adjusters/html/LanguageGroupContainer.html
+++ b/src/shared/adjusters/html/LanguageGroupContainer.html
@@ -4,6 +4,6 @@
         <label for="languagePresetButton" class="language-header-icon gpii-header-icon"></label><br>
         <div class="gpii-spacingEnsurer"></div><br>
 
-        <div class="universalLanguage"></div>
+        <div class="universalLanguage gpii-prefsEditor-category"></div>
     </div>
 </div>
