--- a/src/shared/adjusters/html/announceCapitalsTemplate.html
+++ b/src/shared/adjusters/html/announceCapitalsTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-adjusters">
+<div>
     <input type="checkbox" id="announce-capitals" class="gpiic-announceCapitals"/>
     <label for="announce-capitals" class="gpii-checkbox-label" ><span class="gpiic-announceCapitals-label gpii-checkbox-label-text"></span></label>
 </div>
