--- a/src/shared/adjusters/html/magnifierTemplatePCP.html
+++ b/src/shared/adjusters/html/magnifierTemplatePCP.html
@@ -1,7 +1,7 @@
 <div>
     <h4 class="gpiic-magnifier-magnificationLevel"></h4>
 
-    <div class="gpiic-magnifier-stepper gpii-stepper gpii-stepper-pmt">
+    <div class="gpiic-magnifier-stepper gpii-stepper">
         <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
         <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
         <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
