--- a/src/shared/adjusters/html/punctuationVerbosityTemplate.html
+++ b/src/shared/adjusters/html/punctuationVerbosityTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-adjusters">
+<div>
     <div class="gpiic-speakText-announce-label gpii-speakText-label"></div>
     <div>
         <label class="gpiic-speakText-punctuationVerbosity-label gpii-description"></label>
