--- a/src/shared/adjusters/html/speakTutorialMessagesTemplate.html
+++ b/src/shared/adjusters/html/speakTutorialMessagesTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-adjusters">
+<div>
     <input type="checkbox" id="speak-tutorial" class="gpiic-speakTutorialMessages"/>
     <label for="speak-tutorial" class="gpii-checkbox-label" ><span class="gpiic-speakTutorialMessages-label gpii-checkbox-label-text"></span></label>
 </div>
