--- a/src/shared/adjusters/html/universalLanguageTemplate.html
+++ b/src/shared/adjusters/html/universalLanguageTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-adjusters ui-widget">
+<div class="ui-widget">
     <label class="gpiic-universalLanguage-label gpii-label"></label><br>
     <select class="gpiic-universalLanguage"></select>
 </div>
