--- a/src/shared/adjusters/html/keyEchoTemplate.html
+++ b/src/shared/adjusters/html/keyEchoTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-adjusters">
+<div>
     <div class="gpiic-speakText-readBack-label gpii-speakText-label"></div>
     <div>
         <input type="checkbox" id="key-echo" class="gpiic-speakText-keyEcho"/>
