--- a/src/shared/adjusters/html/magnifierTemplatePMT.html
+++ b/src/shared/adjusters/html/magnifierTemplatePMT.html
@@ -6,7 +6,7 @@
         <iframe tabindex="-1" class="gpiic-magnifier-preview gpiic-adjuster-preview gpii-prefsEditor-previewPerSettingFrame" src="" frameborder="0"></iframe>
     </div>
 
-    <div class="gpiic-magnifier-stepper gpii-stepper gpii-stepper-pmt">
+    <div class="gpiic-magnifier-stepper gpii-stepper">
         <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
         <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
         <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
