--- a/src/shared/adjusters/html/screenReaderLanguage.html
+++ b/src/shared/adjusters/html/screenReaderLanguage.html
@@ -1,4 +1,4 @@
-<div class="gpii-adjusters ui-widget">
+<div class="ui-widget">
     <label class="gpiic-screenReaderLanguage-label gpii-label"></label><br>
     <select class="gpiic-screenReaderLanguage"></select>
 </div>
