--- a/src/shared/adjusters/html/textSizeTemplatePCP.html
+++ b/src/shared/adjusters/html/textSizeTemplatePCP.html
@@ -1,7 +1,7 @@
 <div class="gpii-prefsEditor-adjusterPanel">
     <h4 class="gpiic-textSize-label"></h4>
 
-    <div class="gpiic-textSize-stepper gpii-stepper gpii-stepper-pmt">
+    <div class="gpiic-textSize-stepper gpii-stepper">
         <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
         <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
         <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
