--- a/src/shared/adjusters/html/universalVolumeTemplate.html
+++ b/src/shared/adjusters/html/universalVolumeTemplate.html
@@ -1,8 +1,8 @@
-<div class="gpii-adjusters">
+<div class="gpii-prefsEditor-category">
     <div class="gpiic-universalVolume">
         <label class="gpiic-speakText-universalVolume-label gpii-speakText-label"></label><br>
         <div class="gpiic-universalVolume-description gpii-description"></div>
-        <div class="gpiic-speakText-universalVolume-stepper gpii-stepper gpii-stepper-pmt">
+        <div class="gpiic-speakText-universalVolume-stepper gpii-stepper">
             <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
             <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
             <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
