--- a/src/shared/adjusters/html/visualAlternativesMoreLessTemplate.html
+++ b/src/shared/adjusters/html/visualAlternativesMoreLessTemplate.html
@@ -1,3 +1,3 @@
-<div class="gpii-adjusters gpii-fully-expanded gpii-visualAlternativesMoreLess">
+<div class="gpii-fully-expanded gpii-visualAlternativesMoreLess">
     <input type="button" class="gpii-prefsEditor-moreLess gpiic-visualAlternativesMoreLess-label" aria-controls="gpiic-visualAlternatives-hiddenPanel" role="button">
 </div>
