--- a/src/shared/adjusters/html/voicePitchTemplate.html
+++ b/src/shared/adjusters/html/voicePitchTemplate.html
@@ -1,7 +1,7 @@
-<div class="gpii-adjusters">
+<div>
     <div class="gpiic-voicePitch">
         <label class="gpiic-speakText-voicePitch-label gpii-speakText-label"></label><br>
-        <div class="gpiic-speakText-voicePitch-stepper gpii-stepper gpii-stepper-pmt">
+        <div class="gpiic-speakText-voicePitch-stepper gpii-stepper">
             <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
             <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField gpii-stepper-valueField-no-metric-unit fl-inputs"/>
             <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
