--- a/src/shared/adjusters/html/speakTextTemplate.html
+++ b/src/shared/adjusters/html/speakTextTemplate.html
@@ -1,9 +1,9 @@
 <div>
-    <h3><label for="speakText" class="gpiic-speakText-label gpii-switch"></label></h3>
+    <h3><label class="gpiic-speakText-label gpii-switch"></label></h3>
     <div id="gpii-screenReaderOnOff" class="fl-prefsEditor-onoff">
-        <input type="checkbox" id="speakText" class="gpiic-speakText"/>
-        <label for="speakText">
-            <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
+        <input type="checkbox" class="gpiic-speakText"/>
+        <label>
+            <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0" role="button">
                 <span class="fl-prefsEditor-switch-inner"></span>
             </span>
         </label>
