GPII-590: Proper HTML markup expansion and layout.

--- a/src/shared/adjusters/html/keyEchoTemplate.html
+++ b/src/shared/adjusters/html/keyEchoTemplate.html
@@ -2,6 +2,8 @@
     <div class="gpiic-speakText-readBack-label gpii-speakText-label"></div>
     <div>
         <input type="checkbox" id="key-echo" class="gpiic-speakText-keyEcho"/>
-        <label for="key-echo" class="gpiic-keyEcho-checkbox-label gpii-checkbox-label" tabindex="0"><span class="gpiic-speakText-keyEcho-label gpii-checkbox-label-text"></span></label><br>
+        <label for="key-echo" class="gpiic-keyEcho-checkbox-label gpii-checkbox-label" tabindex="0">
+            <span class="gpiic-speakText-keyEcho-label gpii-checkbox-label-text"></span>
+        </label><br>
     </div>
 </div>
