--- a/src/shared/adjusters/html/screenReaderTemplate.html
+++ b/src/shared/adjusters/html/screenReaderTemplate.html
@@ -1,9 +1,11 @@
-        <h3><label for="screenReaderTTSEnabled" class="gpiic-speakText-screenReaderTTSEnabled-label gpii-speakText-switch"></label></h3>
-        <div id="gpii-speakText-screenReaderOnOff" class="fl-prefsEditor-onoff">
-            <input type="checkbox" id="screenReaderTTSEnabled" class="gpiic-speakText-screenReaderTTSEnabled"/>
-            <label for="screenReaderTTSEnabled">
-                <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
-                    <span class="fl-prefsEditor-switch-inner"></span>
-                </span>
-            </label>
-        </div><br><br><br>
+<h3>
+    <label for="screenReaderTTSEnabled" class="gpiic-speakText-screenReaderTTSEnabled-label gpii-speakText-switch"></label>
+</h3>
+<div id="gpii-speakText-screenReaderOnOff" class="fl-prefsEditor-onoff">
+    <input type="checkbox" id="screenReaderTTSEnabled" class="gpiic-speakText-screenReaderTTSEnabled"/>
+    <label for="screenReaderTTSEnabled">
+        <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
+            <span class="fl-prefsEditor-switch-inner"></span>
+        </span>
+    </label>
+</div><br><br><br>
