--- a/src/shared/adjusters/html/visualAlternativesTemplate.html
+++ b/src/shared/adjusters/html/visualAlternativesTemplate.html
@@ -3,13 +3,11 @@
 
 <div class="gpii-speakText-adjusters">
 
-    <div class="gpiic-speakText-screenReader gpii-speakText-screenReaderTTSEnabled-element">
-    </div>
+    <div class="gpiic-speakText-screenReader gpii-speakText-screenReaderTTSEnabled-element"></div>
 
     <div>
         <div class="gpii-speakText-speechRate-element">
-            <div class="gpiic-speakText-speechRate">
-            </div>
+            <div class="gpiic-speakText-speechRate"></div>
         </div>
     </div>
 
