--- a/src/shared/adjusters/html/capitalsTemplate.html
+++ b/src/shared/adjusters/html/capitalsTemplate.html
@@ -1,2 +1,4 @@
-            <input type="checkbox" id="announce-capitals" class="gpiic-speakText-announceCapitals"/>
-            <label for="announce-capitals" class="gpii-speakText-checkboxLabel" ><span class="gpiic-speakText-announceCapitals-label gpii-speakText-checkboxSpan"></span></label>
+<input type="checkbox" id="announce-capitals" class="gpiic-speakText-announceCapitals"/>
+<label for="announce-capitals" class="gpii-speakText-checkboxLabel" >
+    <span class="gpiic-speakText-announceCapitals-label gpii-speakText-checkboxSpan"></span>
+</label>
