--- a/src/shared/adjusters/html/contrastNewTemplate.html
+++ b/src/shared/adjusters/html/contrastNewTemplate.html
@@ -11,7 +11,9 @@
 <label class="gpii-prefsEditor-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="" tooltip-unchecked="" title=""></label>
 <br/>
 <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
-    <h2><label class="gpiic-contrast-contrastLabel"></label></h2>
+    <h2>
+        <label class="gpiic-contrast-contrastLabel"></label>
+    </h2>
 
     <div class="gpii-prefsEditor-previewPerSettingContainer">
         <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
