--- a/src/shared/adjusters/html/contrastThemeNoPreviewTemplate.html
+++ b/src/shared/adjusters/html/contrastThemeNoPreviewTemplate.html
@@ -1,4 +1,6 @@
-<h2 class="gpii-prefsEditor-firstHeading"><label class="gpiic-contrast-colourTheme"></label></h2>
+<h2 class="gpii-prefsEditor-firstHeading">
+    <label class="gpiic-contrast-colourTheme"></label>
+</h2>
 <div class="gpiic-contrastTheme-container">
     <div class="flc-prefsEditor-themeRow fl-choice gpii-prefsEditor-themeRow">
         <input type="radio" class="gpii-prefsEditor-focusableRadio flc-prefsEditor-themeInput" name="theme" id="bw" value="bw" />
