--- a/src/shared/adjusters/html/increaseSizeTemplatePCP.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePCP.html
@@ -4,7 +4,9 @@
 <div class="gpii-increaseSizePreferenceGroup">
 
     <div class="gpii-prefsEditor-expandedHeading gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
-        <h2 class="gpii-prefsEditor-firstHeading"><label class="gpiic-increaseSize-appearanceHeading"></label></h2>
+        <h2 class="gpii-prefsEditor-firstHeading">
+            <label class="gpiic-increaseSize-appearanceHeading"></label>
+        </h2>
     </div>
 
     <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
@@ -17,9 +19,7 @@
     </div>
 
     <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
-        <div class="gpiic-prefsEditor-magnifierEnabled">
-        </div>
-        <div class="gpiic-prefsEditor-magnifier">
-        </div>
+        <div class="gpiic-prefsEditor-magnifierEnabled"></div>
+        <div class="gpiic-prefsEditor-magnifier"></div>
     </div>
 </div>
