--- a/src/shared/adjusters/html/increaseSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePMT.html
@@ -4,7 +4,9 @@
 <div class="gpii-increaseSizePreferenceGroup">
 
     <div class="gpii-prefsEditor-expandedHeading gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
-        <h2 class="gpii-prefsEditor-firstHeading"><label class="gpiic-increaseSize-appearanceHeading"></label></h2>
+        <h2 class="gpii-prefsEditor-firstHeading">
+            <label class="gpiic-increaseSize-appearanceHeading"></label>
+        </h2>
     </div>
 
     <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
@@ -17,18 +19,13 @@
     </div>
 
     <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
-        <div class="gpiic-prefsEditor-magnifierEnabled">
-        </div>
-        <div class="gpiic-prefsEditor-magnifier">
-        </div>
+        <div class="gpiic-prefsEditor-magnifierEnabled"></div>
+        <div class="gpiic-prefsEditor-magnifier"></div>
 
         <div id="gpiic-magnifier-hiddenPanel" aria-expanded="" aria-label="" role="region" class="gpiic-magnifier-hidden">
-            <div class="gpiic-prefsEditor-magnifierPosition">
-            </div>
-            <div class="gpiic-prefsEditor-magnifierFollows">
-            </div>
-            <div class="gpiic-prefsEditor-showCrosshairs">
-            </div>
+            <div class="gpiic-prefsEditor-magnifierPosition"></div>
+            <div class="gpiic-prefsEditor-magnifierFollows"></div>
+            <div class="gpiic-prefsEditor-showCrosshairs"></div>
         </div>
 
         <div class="gpii-prefsEditor-moreLessWrapper">
