--- a/src/shared/adjusters/html/wordEchoTemplate.html
+++ b/src/shared/adjusters/html/wordEchoTemplate.html
@@ -1,4 +1,6 @@
 <div>
     <input type="checkbox" id="word-echo" class="gpiic-wordEcho"/>
-    <label for="word-echo" class="gpiic-wordEcho-checkbox-label gpii-checkbox-label" tabindex="0"><span class="gpiic-wordEcho-label gpii-checkbox-label-text"></span></label>
+    <label for="word-echo" class="gpiic-wordEcho-checkbox-label gpii-checkbox-label" tabindex="0">
+        <span class="gpiic-wordEcho-label gpii-checkbox-label-text"></span>
+    </label>
 </div>
