GPII-600: Added aria attributes for "magnifier positions" radio group.

--- a/src/shared/adjusters/html/magnifierPositionTemplate.html
+++ b/src/shared/adjusters/html/magnifierPositionTemplate.html
@@ -1,5 +1,5 @@
 <h4 class="gpiic-increaseSize-magnifierPositionHeading"></h4>
-<div class="gpii-increaseSize-magnifierPositionContainer">
+<div class="gpiic-increaseSize-magnifierPositionContainer gpii-increaseSize-magnifierPositionContainer">
     <div class="gpiic-increaseSize-magnifierPositionRow fl-choice gpii-prefsEditor-choice">
         <input type="radio" class="gpii-prefsEditor-focusableRadio gpiic-increaseSize-magnifierPositionInput" name="magnifierPosition" id="magnifierPosition" />
         <div class="fl-indicator gpii-prefsEditor-indicator"></div>
