--- a/src/shared/adjusters/html/punctuationVerbosityTemplate.html
+++ b/src/shared/adjusters/html/punctuationVerbosityTemplate.html
@@ -2,7 +2,7 @@
     <div class="gpiic-speakText-announce-label gpii-speakText-label"></div>
     <div>
         <label class="gpiic-speakText-punctuationVerbosity-label gpii-description"></label>
-        <div class="gpiic-punctuationVerbosity-container gpii-punctuationVerbosity-container" role="radiogroup">
+        <div class="gpiic-punctuationVerbosity-container gpii-punctuationVerbosity-container">
             <div class="gpiic-speakText-punctuationVerbosity-row">
                 <input type="radio" class="gpii-prefsEditor-focusableRadio gpiic-speakText-punctuationVerbosity" id="radioButton-option"/>
                 <label class="gpiic-speakText-punctuationVerbosity-option-label" for="radioButton-option"></label>
