--- a/src/pmt/pmt-VisualAlternativesGroupContainer.html
+++ b/src/pmt/pmt-VisualAlternativesGroupContainer.html
@@ -6,8 +6,10 @@
 
         <div class="gpii-prefsEditor-category">
             <div class="speakText"></div>
-            <div class="words-spoken-per-minute"></div>
-            <div class="volume"></div>
+            <div class="gpiic-speakText-container" role="region" aria-live="polite" aria-atomic="true" aria-relevant="">
+                <div class="words-spoken-per-minute"></div>
+                <div class="volume"></div>
+            </div>
             <div id="gpiic-visualAlternatives-hiddenPanel" class="gpiic-visualAlternatives-hiddenPanel" aria-expanded="" aria-label="" role="region">
                 <div class="voicePitch"></div>
                 <div class="screenReaderLanguage"></div>
