--- a/src/shared/adjusters/html/increaseSizeTemplatePMT.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePMT.html
@@ -19,6 +19,9 @@
     <div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
         <div class="gpiic-prefsEditor-magnifierEnabled">
         </div>
+    </div>
+
+    <div class="gpiic-prefsEditor-magnifier-container" role="region" aria-live="polite" aria-atomic="true" aria-relevant="">
         <div class="gpiic-prefsEditor-magnifier">
         </div>
 
@@ -30,9 +33,9 @@
             <div class="gpiic-prefsEditor-showCrosshairs">
             </div>
         </div>
+    </div>
 
-        <div class="gpii-prefsEditor-moreLessWrapper">
-            <input type="button" class="gpii-prefsEditor-moreLess gpiic-magnifier-moreLess gpiic-magnifier-category" aria-controls="gpiic-magnifier-hiddenPanel" role="button"/>
-        </div>
+    <div class="gpii-prefsEditor-moreLessWrapper">
+        <input type="button" class="gpii-prefsEditor-moreLess gpiic-magnifier-moreLess gpiic-magnifier-category" aria-controls="gpiic-magnifier-hiddenPanel" role="button"/>
     </div>
 </div>
