GPII-600: Fixed some header stylings.

--- a/src/shared/adjusters/html/punctuationVerbosityTemplate.html
+++ b/src/shared/adjusters/html/punctuationVerbosityTemplate.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="gpiic-speakText-announce-label gpii-speakText-label"></div>
+    <div class="gpiic-speakText-announce-label gpii-label"></div>
     <div>
         <label class="gpiic-speakText-punctuationVerbosity-label gpii-description"></label>
         <div class="gpiic-punctuationVerbosity-container gpii-punctuationVerbosity-container">
