GPII-600: Added aria attributes for some PMT checkboxes.

--- a/src/shared/adjusters/html/speakTutorialMessagesTemplate.html
+++ b/src/shared/adjusters/html/speakTutorialMessagesTemplate.html
@@ -1,4 +1,6 @@
 <div>
     <input type="checkbox" id="speak-tutorial" class="gpiic-speakTutorialMessages"/>
-    <label for="speak-tutorial" class="gpiic-speakTutorialMessages-checkbox-label gpii-checkbox-label" tabindex="0"><span class="gpiic-speakTutorialMessages-label gpii-checkbox-label-text"></span></label>
+    <label for="speak-tutorial" class="gpiic-speakTutorialMessages-checkbox-label gpii-checkbox-label" tabindex="0" role="checkbox" aria-checked="">
+    	<span class="gpiic-speakTutorialMessages-label gpii-checkbox-label-text"></span>
+    </label>
 </div>
