--- a/src/shared/adjusters/html/followingElementTemplate.html
+++ b/src/shared/adjusters/html/followingElementTemplate.html
@@ -2,7 +2,7 @@
     <h4 class="gpiic-followingElementHeading gpii-label"></h4>
     <div class="gpii-followingElementRow gpiic-followingElementRow">
     	<input type="checkbox" class="gpiic-followingElementInput" id="followingElement" name="followingElement"/>
-    	<label for="followingElement" class="gpii-iconCheckAdjusterArea gpiic-followingElementLabel" tabindex="0">
+    	<label for="followingElement" class="gpii-iconCheckAdjusterArea gpiic-followingElementLabel" tabindex="0" role="checkbox" aria-checked="">
         </label>
     </div>
 </div>
