--- a/src/shared/adjusters/html/punctuationVerbosityTemplate.html
+++ b/src/shared/adjusters/html/punctuationVerbosityTemplate.html
@@ -3,7 +3,7 @@
     <div>
         <label class="gpiic-speakText-punctuationVerbosity-label gpii-description"></label>
         <div class="gpii-punctuationVerbosity-container">
-            <div class="gpii-speakText-punctuationVerbosity-row gpiic-speakText-punctuationVerbosity-row">
+            <div class="gpiic-speakText-punctuationVerbosity-row">
                 <input type="radio" class="gpiic-speakText-punctuationVerbosity" id="radioButton-option"/>
                 <label class="gpiic-speakText-punctuationVerbosity-option-label" for="radioButton-option"></label>
             </div>
