GPII-600: Fixed issues resulted from merging in GPII-590 branch, that aria attributes set for checkboxes were messed up. Also added proper aria attributes for "show crosshairs" checkbox.

--- a/src/shared/adjusters/html/iconCheckTemplateShowCrosshairs.html
+++ b/src/shared/adjusters/html/iconCheckTemplateShowCrosshairs.html
@@ -1,7 +1,7 @@
 <div class="gpii-iconCheck-adjuster">
     <h4 class="gpiic-iconCheckAdjusterTitle"></h4>
     <input type="checkbox" id="preferenceSwitchIconCheckAdjusterShowCrosshairs"/>
-    <label for="preferenceSwitchIconCheckAdjusterShowCrosshairs" class="gpiic-showCrosshairs-iconCheckAdjusterArea gpii-iconCheckAdjusterArea" tabindex="0">
+    <label for="preferenceSwitchIconCheckAdjusterShowCrosshairs" class="gpiic-showCrosshairs-iconCheckAdjusterArea gpii-iconCheckAdjusterArea" tabindex="0" role="checkbox" aria-checked="">
     	<div class="gpiic-iconCheckAdjusterIcon gpii-prefsEditor-adjusterIcons"></div>
     	<div class="gpii-iconCheckAdjusterContainer">
     		<label for="preferenceSwitchIconCheckAdjusterShowCrosshairs" class="gpiic-iconCheckAdjusterDescription gpii-iconCheckAdjusterDescription gpii-table-cell-valign-label"></label>
