GPII-637: Completed localisations of on/off and "save & apply" in four supported locales: "de", "el", "en" and "es".

--- a/src/shared/adjusters/html/onOffSwitchTemplate.html
+++ b/src/shared/adjusters/html/onOffSwitchTemplate.html
@@ -5,7 +5,7 @@
     <div id="gpii-onOffSwitch-onOff" class="fl-prefsEditor-onoff">
         <input type="checkbox" id="onOffSwitchInput" class="gpiic-onOffSwitch-input"/>
         <label for="onOffSwitchInput">
-            <span class="fl-prefsEditor-switch gpiic-prefsEditor-onOffSwitch gpiic-onOffSwitch-focusable" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
+            <span class="fl-prefsEditor-switch gpiic-prefsEditor-onOffSwitch gpiic-onOffSwitch-focusable" data-checkboxStateOn="" data-checkboxStateOff="" tabindex="0">
                 <span class="fl-prefsEditor-switch-inner"></span>
             </span>
         </label>
