--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -1,7 +1,7 @@
 <div id="options" action="" class="fl-container-flex30 fl-prefsEditor gpii-prefsEditor fl-focus gpii-prefsEditor-pmtContainer">
     <div class="gpii-prefsEditor-userStatusBar gpiic-prefsEditor-userStatusBar">
         <a class="gpii-prefsEditor-link gpii-prefsEditor-fullEditor gpiic-prefsEditor-fullEditorLink"></a>
-        <label for="pmtResetButton" class="gpii-prefsEditor-link gpii-prefsEditor-pcp-userLogout gpiic-prefsEditor-userLogoutLink"></label>
+        <label for="pmtResetButton" class="flc-prefsEditor-reset gpii-prefsEditor-link gpii-prefsEditor-pcp-userLogout gpiic-prefsEditor-userLogoutLink"></label>
     </div>
 
     <div class="gpii-prefsEditor-preferencesContainer">
