--- a/tests/html/gpiiSession-Test.html
+++ b/tests/html/gpiiSession-Test.html
@@ -8,6 +8,7 @@
 
         <script src="../lib/qunit/qunit/js/qunit.js"></script>
         <script src="../../src/shared/lib/infusion/MyInfusion.js"></script>
+        <script src="../lib/qunit/mockjax/js/jquery.mockjax.js"></script>
         <script src="../lib/infusion/jqUnit/js/jqUnit.js"></script>
         <script src="../lib/infusion/utils/js/IoCTestUtils.js"></script>
 
