--- a/demos/prefsEditor/pcp.html
+++ b/demos/prefsEditor/pcp.html
@@ -83,6 +83,7 @@
     <script type="text/javascript" src="../../src/shared/schemas/js/pcpSchema.js"></script>
     <script type="text/javascript" src="../../src/shared/common/GpiiSession.js"></script>
     <script type="text/javascript" src="../../src/shared/common/GpiiStore.js"></script>
+    <script type="text/javascript" src="../../src/shared/common/ModelMonitor.js"></script>
 
     <!-- Socket.io-client library -->
     <script type="text/javascript" src="../../src/shared/lib/socket.io/socket.io.js"></script>
