--- a/src/shared/adjusters/html/screenReaderLanguageTemplate.html
+++ b/src/shared/adjusters/html/screenReaderLanguageTemplate.html
@@ -1,4 +1,5 @@
 <div class="gpii-dropdown ui-widget">
     <label class="gpiic-screenReaderLanguage-label gpii-label"></label><br>
-    <select class="gpiic-screenReaderLanguage"></select>
+    <span class="gpii-dropdownArrow ui-button-icon-primary ui-icon ui-icon-triangle-1-s"></span>
+    <select class="gpiic-screenReaderLanguage gpii-dropdownSelect"></select>
 </div>
