--- a/src/shared/adjusters/html/universalLanguageTemplate.html
+++ b/src/shared/adjusters/html/universalLanguageTemplate.html
@@ -1,4 +1,5 @@
-<div class="ui-widget">
+<div class="gpii-dropdown ui-widget">
     <label class="gpiic-universalLanguage-label gpii-label"></label><br>
-    <select class="gpiic-universalLanguage"></select>
+    <span class="gpii-dropdownArrow ui-button-icon-primary ui-icon ui-icon-triangle-1-s"></span>
+    <select class="gpiic-universalLanguage gpii-dropdownSelect"></select>
 </div>
