GPII-669: Save button styled to be easier to see.

--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -28,8 +28,8 @@
     <div class="gpii-pcp-bottomRow">
         <span class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
         <span class="gpii-pcp-saveButtonContainer">
-            <span for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
-            </span>
+            <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
+            </label>
             <input id="pmtSaveButton" class="flc-prefsEditor-save gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
         </span>
     </div>
