GPII-673: Added border to various elements. This is needed in order to be distinguished in high contrast.

--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -8,14 +8,14 @@
         <div class="gpii-prefsEditor-preferences gpii-prefsEditor-PCP-preferences gpiic-prefsEditor-preferences">
             <form id="options" action="" class="fl-prefsEditor gpii-prefsEditor fl-focus">
 
-                <div class="fl-container-flex30 fl-force-left gpii-prefsEditor-preferenceGroup">
+                <div class="fl-force-left gpii-prefsEditor-preferenceGroup">
                     <div class="fl-prefsEditor-category">
                         <div class="gpiic-visualAlternatives"></div>
                         <div class="gpiic-volumeGroup"></div>
                         <div class="gpiic-languageGroup"></div>
 
                         <div class="contrastPreferenceGroup">
-                            <div class="gpiic-prefsEditor-contrastPanel gpii-prefsEditor-contrastPanel"></div>
+                            <div class="gpiic-prefsEditor-contrastPanel gpii-prefsEditor-contrastPanel gpii-prefsEditor-adjusterGroup"></div>
                         </div>
                         <div class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel">
                         </div>
