--- a/src/shared/adjusters/html/increaseSizeTemplatePCP.html
+++ b/src/shared/adjusters/html/increaseSizeTemplatePCP.html
@@ -1,7 +1,7 @@
 <div class="gpii-prefsEditor-headerImage gpii-prefsEditor-adjusterIcons">
     <label class="gpii-prefsEditor-headerTitle gpiic-headerTitle gpii-prefsEditor-headerClickableLabel"></label>
 </div>
-<div class="gpii-increaseSizePreferenceGroup">
+<div class="gpii-increaseSizePreferenceGroup gpii-prefsEditor-adjusterGroup">
 
     <div class="gpii-prefsEditor-expandedHeading gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
         <h2 class="gpii-prefsEditor-firstHeading">
