GPII-667: fixed textfieldStepper tests
The textfieldStepper tests were missing a dependency (ariaUtility.js)

--- a/tests/html/textfieldStepper-Test.html
+++ b/tests/html/textfieldStepper-Test.html
@@ -12,6 +12,7 @@
         <script src="../lib/infusion/utils/js/IoCTestUtils.js"></script>
 
         <!-- Preferences Editors specific files go here: -->
+        <script src="../../src/shared/common/ariaUtility.js"></script>
         <script src="../../src/shared/components/textfieldStepper/js/textfieldStepper.js"></script>
         <!-- Test specific files go here: -->
         <script src="../js/textfieldStepperTests.js"></script>
