GPII-669: Save button styling finished. Also changed couple of names, changed model listener.

--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -27,10 +27,10 @@
 
     <div class="gpii-pcp-bottomRow">
         <span class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
-        <span class="gpii-pcp-saveButtonContainer">
-            <span for="pcpSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
-            </span>
-            <input id="pcpSaveButton" class="flc-prefsEditor-save gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
+        <span class="gpiic-pcp-saveButtonContainer gpii-pcp-saveButtonContainer">
+            <label for="pcpSaveButton" class="gpiic-prefsEditor-cloudIcon gpii-prefsEditor-frameIcon gpii-prefsEditor-saveAndApplyButtonLabel gpii-pcp-cloudIcon">
+            </label>
+            <input id="pcpSaveButton" class="flc-prefsEditor-save gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply"></input>
         </span>
     </div>
 </div>
