GPII-677: All checkboxes styled identically. Removed now unnecessary css rules for old styling.

--- a/src/shared/adjusters/html/announceCapitalsTemplate.html
+++ b/src/shared/adjusters/html/announceCapitalsTemplate.html
@@ -1,6 +1,7 @@
 <div>
     <input type="checkbox" id="announce-capitals" class="gpiic-announceCapitals"/>
-    <label for="announce-capitals" class="gpiic-announceCapitals-checkbox-label gpii-checkbox-label" tabindex="0" role="checkbox" aria-checked="">
+    <label for="announce-capitals" class="gpiic-announceCapitals-checkbox-label" tabindex="0" role="checkbox" aria-checked="">
+    	<span class="gpii-prefsEditor-adjusterIcons gpii-iconCheckAdjusterCheckIcon"></span>
     	<span class="gpiic-announceCapitals-label gpii-checkbox-label-text"></span>
     </label>
 </div>
