--- a/src/shared/adjusters/html/speakTutorialMessagesTemplate.html
+++ b/src/shared/adjusters/html/speakTutorialMessagesTemplate.html
@@ -1,7 +1,7 @@
 <div>
     <input type="checkbox" id="speak-tutorial" class="gpiic-speakTutorialMessages"/>
     <label for="speak-tutorial" class="gpiic-speakTutorialMessages-checkbox-label" tabindex="0" role="checkbox" aria-checked="">
-        <div class="gpii-prefsEditor-adjusterIcons gpii-iconCheckAdjusterCheckIcon"></div>
+        <span class="gpii-prefsEditor-adjusterIcons gpii-iconCheckAdjusterCheckIcon"></span>
         <span class="gpiic-speakTutorialMessages-label gpii-checkbox-label-text"></span>
     </label>
 </div>
