--- a/src/shared/adjusters/html/wordEchoTemplate.html
+++ b/src/shared/adjusters/html/wordEchoTemplate.html
@@ -1,6 +1,7 @@
 <div>
     <input type="checkbox" id="word-echo" class="gpiic-wordEcho"/>
-    <label for="word-echo" class="gpiic-wordEcho-checkbox-label gpii-checkbox-label" tabindex="0" role="checkbox" aria-checked="">
+    <label for="word-echo" class="gpiic-wordEcho-checkbox-label" tabindex="0" role="checkbox" aria-checked="">
+    	<span class="gpii-prefsEditor-adjusterIcons gpii-iconCheckAdjusterCheckIcon"></span>
     	<span class="gpiic-wordEcho-label gpii-checkbox-label-text"></span>
     </label>
 </div>
