--- a/src/shared/adjusters/html/keyEchoTemplate.html
+++ b/src/shared/adjusters/html/keyEchoTemplate.html
@@ -2,7 +2,8 @@
     <div class="gpiic-speakText-readBack-label gpii-label"></div>
     <div>
         <input type="checkbox" id="key-echo" class="gpiic-speakText-keyEcho"/>
-        <label for="key-echo" class="gpiic-keyEcho-checkbox-label gpii-checkbox-label" tabindex="0" role="checkbox" aria-checked="">
+        <label for="key-echo" class="gpiic-keyEcho-checkbox-label" tabindex="0" role="checkbox" aria-checked="">
+        	<span class="gpii-prefsEditor-adjusterIcons gpii-iconCheckAdjusterCheckIcon"></span>
         	<span class="gpiic-speakText-keyEcho-label gpii-checkbox-label-text"></span>
         </label><br>
     </div>
